level_clustering/specter_adaptation/slurm20-202542.out
  File "/vol/bitbucket/bp824/astro/level_clustering/specter_adaptation/cluster_chunks_ii.py", line 1126
    print_memory_info("Script end", args.debug_memory)
    ^^^^^^^^^^^^^^^^^
SyntaxError: expected 'except' or 'finally' block
